- Refactor the Stdin prospector to use the input interface {pull}6116[6116]
- Refactor the usage of prospector to input in the YAML reference and
  the system test. {pull}6121[6121]
- Add IIS module to parse access log and error log. {pull}6127[6127]
- Remove the undefined `username` option from the Redis input and clarify the documentation. {pull}6662[6662]

*Heartbeat*

- Made the url field of heartbeat aggregatable. {pull}6263[6263]

*Metricbeat*

- Rename `heap_init` field to `heap.init`. {pull}5320[5320]
- Rename `http.response.status_code` field to `http.response.code`. {pull}5521[5521]
- Rename `golang.heap.system.optained` field to `golang.heap.system.obtained`. {issue}5703[5703]
- Support haproxy stats gathering using http (additionaly to tcp socket). {pull}5819[5819]
- De dot keys in jolokia/jmx metricset to prevent collisions. {pull}5957[5957]
- Support to optionally 'de dot' keys in http/json metricset to prevent collisions. {pull}5970[5970]
- De dot keys in kubernetes/event metricset to prevent collisions. {pull}6203[6203]
- Fix the default configuration for Logstash to include the default port. {pull}6279[6279]
- Add filtering option by exact device names in system.diskio. `diskio.include_devices`. {pull}6085[6085]
- Fix dealing with new process status codes in Linux kernel 4.14+. {pull}6306[6306]
- Add config option for windows/perfmon metricset to ignore non existent counters. {pull}6432[6432]
- Support apache status pages for versions older than 2.4.16. {pull}6450[6450]
- Add support for huge pages on Linux. {pull}6436[6436]

*Packetbeat*

*Winlogbeat*

==== Bugfixes

*Affecting all Beats*

- Remove ID() from Runner interface {issue}5153[5153]
- Correctly send configured `Host` header to the remote server. {issue}4842[4842]
- Change add_kubernetes_metadata to attempt detection of namespace. {pull}5482[5482]
- Avoid double slash when join url and path {pull}5517[5517]
- Fix console color output for Windows. {issue}5611[5611]